--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   shimmer: ^2.0.0
   flutter_svg: ^2.0.5
   flutter_neumorphic: ^3.2.0
+  get: ^4.6.5
 
 dev_dependencies:
   flutter_test:
