--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   flutter_svg: ^2.0.5
   flutter_neumorphic: ^3.2.0
   get: ^4.6.5
+  quickalert: ^1.0.1
 
 dev_dependencies:
   flutter_test:
@@ -88,6 +89,7 @@ flutter:
     - assets/icons/location.svg
     - assets/icons/images.svg
     - assets/icons/video.svg
+    - assets/icons/facebook.svg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
