--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -75,8 +75,11 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
+  
   assets:
     - assets/images/
+    - assets/images/49.jpg
+    - assets/images/14.jpg
     - assets/icons/
     - assets/icons/home.svg
     - assets/icons/explore.svg
